improve safefty, don't crash on non arrays

BUG: 482152


(cherry picked from commit 39ae329b7bd9d2e20ab12c10b612fe6ff142ed1b)